# fcc-data-analysis-with-python

./: README.md
fcc-demographic-data-analyzer/: demographic_data_analyzer.py
fcc-mean-var-std/: mean_var_std.py
fcc-medical-data-visualizer/: medical_data_visualizer.py  pyproject.toml
fcc-sea-level-predictor/: main.py  test_module.py
fcc-time-series-visualizer/: pyproject.toml  time_series_visualizer.py
