[tool.poetry]
name = "fcc-medical-data-visualizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
seaborn = "^0.11.0"
numpy = "^1.19.2"
matplotlib = "3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
